# SmallGraphicsSample

./: CMakeLists.txt
source/raptor/application/: application.cpp  application.hpp  game_camera.cpp  game_camera.hpp  input.cpp  input.hpp  keys.cpp  keys.hpp  window.cpp  window.hpp
source/raptor/foundation/: array.hpp  assert.hpp  bit.cpp  bit.hpp  blob.hpp  blob_serialization.cpp  blob_serialization.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  data_structures.cpp  data_structures.hpp  file.cpp  file.hpp  gltf.cpp  gltf.hpp  hash_map.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  memory_utils.hpp  numerics.cpp  numerics.hpp  platform.hpp  process.cpp  process.hpp  relative_data_structures.hpp  resource_manager.cpp  resource_manager.hpp  serialization.cpp  serialization.hpp  service.hpp  service_manager.cpp  service_manager.hpp  string.cpp  string.hpp  time.cpp  time.hpp  (+1 more)
source/sample/: CMakeLists.txt  main.cpp
source/sample/graphics/: command_buffer.cpp  command_buffer.hpp  gpu_device.cpp  gpu_device.hpp  gpu_enum.hpp  gpu_profiler.cpp  gpu_profiler.hpp  gpu_resources.cpp  gpu_resources.hpp  raptor_imgui.cpp  raptor_imgui.hpp  renderer.cpp  renderer.hpp
source/sample/shaders/: main.frag  main.vert
